rtest/tests/jsr335/Semantics/MethodReferenceAnalysis/ExprMethodReference/ShouldCompile/syntax09/Test.java
// .result=COMPILE_PASS

public class Test {
	
	interface A {
		int m(int a);
	}
	
	public <T> int meth(T b) {
		return 3;
	}
	
	public void method(int i) {
		A a = this::meth;
	}
}