rtest/tests/jsr335/Semantics/MethodReferenceAnalysis/ExprMethodReference/ShouldFail/syntax02/Test.java
// .result=COMPILE_FAIL

public class Test {
	
	interface A {
		int m();
	}
	
	public int method(int i) {
		return i;
	}
	
	A a = this::method;
}